testdata/baselines/reference/submodule/compiler/argumentsObjectIterator02_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
argumentsObjectIterator02_ES6.ts(2,26): error TS2304: Cannot find name 'Symbol'.
argumentsObjectIterator02_ES6.ts(6,16): error TS2339: Property 'push' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== argumentsObjectIterator02_ES6.ts (2 errors) ====
    function doubleAndReturnAsArray(x: number, y: number, z: number): [number, number, number] {
        let blah = arguments[Symbol.iterator];
                             ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
        let result = [];
        for (let arg of blah()) {
            result.push(arg + arg);
                   ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
        }
        return <[any, any, any]>result;
    }
    
    